--- a/pages/posts/post.wxml
+++ b/pages/posts/post.wxml
@@ -1,28 +1,21 @@
+<!--引入模板文件-->
+<import src="post-item/post-item-template.wxml"/>
 <view>
-  <swiper indicator-dots="true" autoplay="true" interval="5000" vertical="true">
+  <swiper catchtap="onSwiperTap" indicator-dots="true" autoplay="true" interval="5000" vertical="{{false}}">
     <swiper-item>
-      <image src="/images/post/xiaolong.jpg"></image>
+      <image src="/images/post/xiaolong.jpg" data-postId="4"></image>
     </swiper-item>
     <swiper-item>
-      <image src="/images/post/cat.png"></image>
+      <image src="/images/post/cat.png" data-postId="6"></image>
     </swiper-item>
     <swiper-item>
-      <image src="/images/post/vr.png"></image>
+      <image src="/images/post/vr.png" data-postId="5"></image>
     </swiper-item>
   </swiper>
-  <view class="post-container">
-    <view class="post-author-date">
-      <image class="post-author" src="/images/avatar/1.png"></image>
-      <text class="post-date">2017/5/21</text>
-    </view>
-      <text class="post-title">文章标题</text>
-      <image class="post-image" src="/images/post/crab.png"></image>
-      <text class="post-content">文章简介</text>
-      <view class="classname">
-        <image src="../../images/icon/view.png"></image>
-        <text></text>
-        <image src="../../images/icon/chat.png"></image>
-        <text></text>
-      </view>
-  </view>
+  <block wx:for="{{postList}}" wx:for-item="item" wx:for-index="idx"> 
+  <!--template模板化技术 item是其中一组数据-->
+  <view catchtap="onPostTap" data-postId="{{item.postId}}">
+    <template is="postItem" data="{{...item}}" />
+   </view>
+  </block >
 </view>
