--- a/pages/welcome/welcome.wxss
+++ b/pages/welcome/welcome.wxss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   background-color:#b3d4db;
-  /*height:1334rpx;*/
+  /*height:1334rpx; iphone6 高度*/
 
 }
 .avatar{
@@ -35,6 +35,9 @@
     color: #405f80;
 }
 
+/*
+    设置背景颜色
+*/
 page{
     height: 100%;
     background-color:#b3d4db;
